--- a/NewTransactionModel.csproj
+++ b/NewTransactionModel.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BouncyCastle.NetCoreSdk" Version="1.9.7" />
+  </ItemGroup>
+
 </Project>
