--- a/NewTransactionModel/NewTransactionModel.csproj
+++ b/NewTransactionModel/NewTransactionModel.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HushNetwork.Model\HushNetwork.Model.csproj" />
+  </ItemGroup>
+
 </Project>
